--- a/package.json
+++ b/package.json
@@ -1,11 +1,17 @@
 {
   "dependencies": {
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@fontsource/roboto": "^4.5.8",
+    "@mui/icons-material": "^5.10.6",
+    "@mui/material": "^5.10.8",
     "@reduxjs/toolkit": "^1.8.5",
     "@types/react": "^18.0.21",
     "@types/react-redux": "^7.1.24",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-webpack-plugin": "^3.2.0",
     "html-webpack-plugin": "^5.5.0",
+    "jest": "^29.1.2",
     "mini-css-extract-plugin": "^2.6.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -17,11 +23,12 @@
     "workbox-webpack-plugin": "^6.5.4"
   },
   "devDependencies": {
+    "@types/jest": "^29.1.2",
     "@types/react-dom": "^18.0.6",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.30.6",
     "@typescript-eslint/parser": "^5.30.6",
-    "@webpack-cli/generators": "^2.5.0",
+    "@webpack-cli/generators": "^0.1.9",
     "css-loader": "^6.7.1",
     "eslint": "^8.19.0",
     "eslint-config-airbnb-base": "^15.0.0",
