--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@reduxjs/toolkit": "^1.8.5",
     "@types/react": "^18.0.21",
     "@types/react-redux": "^7.1.24",
+    "axios": "^1.1.3",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-webpack-plugin": "^3.2.0",
     "html-webpack-plugin": "^5.5.0",
@@ -16,6 +17,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.4",
+    "react-router-dom": "^6.4.2",
     "typescript": "^4.8.3",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4",
